[gd_scene load_steps=23 format=2]

[ext_resource path="res://lobby/scenes/car_selector/car_selector.gd" type="Script" id=1]
[ext_resource path="res://themes/FlatUI/kenneyUI-blue.tres" type="Theme" id=2]
[ext_resource path="res://assets/textures/arrowRight.png" type="Texture" id=3]
[ext_resource path="res://themes/FlatUI/UIpack_vector.svg" type="Texture" id=4]
[ext_resource path="res://assets/textures/arrowLeft.png" type="Texture" id=5]
[ext_resource path="res://lobby/scenes/car_selector/stats.gd" type="Script" id=6]

[sub_resource type="StyleBoxTexture" id=44]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 4 )
region_rect = Rect2( 1, 240, 190, 49 )
margin_left = 12.5436
margin_right = 8.78053
margin_top = 10.0349
margin_bottom = 14.2161

[sub_resource type="StyleBoxTexture" id=45]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 4 )
region_rect = Rect2( 421, 244, 190, 45 )
margin_left = 12.5436
margin_right = 8.78053
margin_top = 10.0349
margin_bottom = 14.2161

[sub_resource type="StyleBoxTexture" id=46]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 4 )
region_rect = Rect2( 1, 240, 190, 49 )
margin_left = 12.5436
margin_right = 8.78053
margin_top = 10.0349
margin_bottom = 14.2161

[sub_resource type="StyleBoxTexture" id=47]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 4 )
region_rect = Rect2( 211, 240, 190, 49 )
margin_left = 12.5436
margin_right = 8.78053
margin_top = 10.0349
margin_bottom = 14.2161

[sub_resource type="StyleBoxTexture" id=48]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
texture = ExtResource( 4 )
region_rect = Rect2( 211, 240, 190, 49 )
margin_left = 12.5436
margin_right = 8.78053
margin_top = 10.0349
margin_bottom = 14.2161

[sub_resource type="DynamicFontData" id=43]
font_path = "res://themes/FlatUI/kenvector_future.ttf"

[sub_resource type="DynamicFont" id=49]
size = 22
font_data = SubResource( 43 )

[sub_resource type="StyleBoxFlat" id=50]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.207843, 0.207843, 0.215686, 0.352941 )
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=54]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFontData" id=52]
antialiased = false
font_path = "res://themes/FlatUI/kenvector_future.ttf"

[sub_resource type="DynamicFont" id=9]
font_data = SubResource( 52 )

[sub_resource type="Theme" id=53]
default_font = SubResource( 9 )
ProgressBar/colors/font_color = Color( 0.941176, 0.941176, 0.941176, 0 )
ProgressBar/styles/bg = SubResource( 54 )

[sub_resource type="Gradient" id=55]
offsets = PoolRealArray( 0, 0.996283 )
colors = PoolColorArray( 0, 0, 0, 0.27451, 0, 0, 0, 0.27451 )

[sub_resource type="GradientTexture" id=56]
gradient = SubResource( 55 )

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.2, 0.7, 1 )
colors = PoolColorArray( 1, 0.678431, 0, 1, 1, 0.984314, 0, 1, 0.992157, 1, 0, 1, 0.313726, 1, 0, 1 )

[sub_resource type="GradientTexture" id=57]
gradient = SubResource( 10 )

[node name="car_selector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PlayerSettings" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -57.0
margin_right = 225.0
margin_bottom = -15.0
theme = ExtResource( 2 )

[node name="CarSelectLeft" type="Button" parent="PlayerSettings"]
margin_right = 42.251
margin_bottom = 42.251
rect_min_size = Vector2( 42.251, 42.251 )
focus_neighbour_left = NodePath("../../../main/settingsBox/settingsBtn")
focus_neighbour_top = NodePath("../../../Server/Nickname")
focus_neighbour_right = NodePath("../CarSelectRight")
focus_next = NodePath("../CarSelectRight")
focus_previous = NodePath("../../../main/settingsBox/settingsBtn")
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.12
custom_styles/hover = SubResource( 44 )
custom_styles/pressed = SubResource( 45 )
custom_styles/focus = SubResource( 46 )
custom_styles/disabled = SubResource( 47 )
custom_styles/normal = SubResource( 48 )
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarName" type="Label" parent="PlayerSettings"]
margin_left = 46.0
margin_right = 404.0
margin_bottom = 42.251
rect_min_size = Vector2( 200, 42.251 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 49 )
text = "[CAR]"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarSelectRight" type="Button" parent="PlayerSettings"]
margin_left = 408.0
margin_right = 450.251
margin_bottom = 42.251
rect_min_size = Vector2( 42.251, 42.251 )
focus_neighbour_left = NodePath("../CarSelectLeft")
focus_neighbour_top = NodePath("../../../Server/Nickname")
focus_neighbour_right = NodePath("../../../Server/Nickname")
focus_next = NodePath("../../../Server/Nickname")
focus_previous = NodePath("../CarSelectLeft")
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 44 )
custom_styles/pressed = SubResource( 45 )
custom_styles/focus = SubResource( 46 )
custom_styles/disabled = SubResource( 47 )
custom_styles/normal = SubResource( 48 )
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 42.251
margin_bottom = 42.251
rect_min_size = Vector2( 42.251, 42.251 )
focus_neighbour_left = NodePath("../../../main/settingsBox/settingsBtn")
focus_neighbour_top = NodePath("../../../Server/Nickname")
focus_neighbour_right = NodePath("../CarSelectRight")
focus_next = NodePath("../CarSelectRight")
focus_previous = NodePath("../../../main/settingsBox/settingsBtn")
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.12
custom_styles/hover = SubResource( 44 )
custom_styles/pressed = SubResource( 45 )
custom_styles/focus = SubResource( 46 )
custom_styles/disabled = SubResource( 47 )
custom_styles/normal = SubResource( 48 )
icon = ExtResource( 5 )
expand_icon = true

[node name="stats_panel" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -268.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = 53.0
grow_horizontal = 0
rect_min_size = Vector2( 320, 0 )
rect_pivot_offset = Vector2( 160, 19 )
mouse_filter = 1
custom_styles/panel = SubResource( 50 )

[node name="stats" type="GridContainer" parent="stats_panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 138.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 53 )
custom_constants/vseparation = 4
custom_constants/hseparation = 6
columns = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acceleration" type="Label" parent="stats_panel/stats"]
margin_right = 174.0
margin_bottom = 18.0
text = "Beschleunigung"
align = 2

[node name="acceleration_bar" type="TextureProgress" parent="stats_panel/stats"]
margin_left = 180.0
margin_right = 380.0
margin_bottom = 18.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 100, 10 )
size_flags_horizontal = 3
min_value = 200.0
max_value = 300.0
step = 0.01
value = 260.0
texture_under = SubResource( 56 )
texture_progress = SubResource( 57 )
nine_patch_stretch = true

[node name="handling" type="Label" parent="stats_panel/stats"]
margin_top = 22.0
margin_right = 174.0
margin_bottom = 40.0
text = "Handhabung"
align = 2

[node name="handling_bar" type="TextureProgress" parent="stats_panel/stats"]
margin_left = 180.0
margin_top = 22.0
margin_right = 380.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 100, 10 )
size_flags_horizontal = 3
min_value = 52.0
max_value = 69.0
step = 0.01
value = 67.0
texture_under = SubResource( 56 )
texture_progress = SubResource( 57 )
nine_patch_stretch = true

[node name="mass" type="Label" parent="stats_panel/stats"]
margin_top = 44.0
margin_right = 174.0
margin_bottom = 62.0
text = "Masse"
align = 2

[node name="mass_bar" type="TextureProgress" parent="stats_panel/stats"]
margin_left = 180.0
margin_top = 44.0
margin_right = 380.0
margin_bottom = 62.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 100, 10 )
size_flags_horizontal = 3
max_value = 2.0
step = 0.01
value = 0.7
texture_under = SubResource( 56 )
texture_progress = SubResource( 57 )
nine_patch_stretch = true

[node name="boost" type="Label" parent="stats_panel/stats"]
margin_top = 66.0
margin_right = 174.0
margin_bottom = 84.0
text = "Boost"
align = 2

[node name="boost_bar" type="TextureProgress" parent="stats_panel/stats"]
margin_left = 180.0
margin_top = 66.0
margin_right = 380.0
margin_bottom = 84.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 100, 10 )
size_flags_horizontal = 3
max_value = 0.5
step = 0.01
value = 0.2
texture_under = SubResource( 56 )
texture_progress = SubResource( 57 )
nine_patch_stretch = true

[node name="slipstream" type="Label" parent="stats_panel/stats"]
margin_top = 88.0
margin_right = 174.0
margin_bottom = 106.0
text = "Windschatten"
align = 2

[node name="slipstream_bar" type="TextureProgress" parent="stats_panel/stats"]
margin_left = 180.0
margin_top = 88.0
margin_right = 380.0
margin_bottom = 106.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 100, 10 )
size_flags_horizontal = 3
max_value = 0.5
step = 0.01
value = 0.2
texture_under = SubResource( 56 )
texture_progress = SubResource( 57 )
nine_patch_stretch = true

[node name="linear_damp" type="Label" parent="stats_panel/stats"]
margin_top = 110.0
margin_right = 174.0
margin_bottom = 128.0
text = "Widerstand"
align = 2

[node name="linear_damp_bar" type="TextureProgress" parent="stats_panel/stats"]
margin_left = 180.0
margin_top = 110.0
margin_right = 380.0
margin_bottom = 128.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 100, 10 )
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.2
texture_under = SubResource( 56 )
texture_progress = SubResource( 57 )
nine_patch_stretch = true

[connection signal="pressed" from="PlayerSettings/CarSelectLeft" to="." method="_on_car_select" binds= [ -1 ]]
[connection signal="pressed" from="PlayerSettings/CarSelectRight" to="." method="_on_car_select" binds= [ 1 ]]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
